added tailwind css and googlesignin

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>ft_transcendence index</title>
+</head>
+<body class="relative">
+	<script src="https://accounts.google.com/gsi/client"></script>
+    <script type="module" src="/src/main.ts"></script>
+	<script type="module" src="/src/google_sign_in.ts"></script>
+	<div id="app"></div>
+</body>
+</html>
+
+<!-- <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,4 +23,27 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
-</html>
+</html> -->
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
+    <title>Google Sign-In TEST</title>
+    <script src="https://accounts.google.com/gsi/client"></script>
+</head>
+<body>
+    <div id="g_id_onload"
+         data-client_id="313465714569-nq8gfim6in2iki8htj3t326vhbunl23a.apps.googleusercontent.com"
+         data-login_uri="http://localhost"
+         data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin" data-type="standard" data-theme="filled_blue"></div>
+
+    <script>
+        function handleCredentialResponse(response) {
+            alert("SUCCESS! Token: " + response.credential);
+            console.log("2025 JWT:", response.credential);
+        }
+    </script>
+</body>
+</html> -->
