--- a/frontend/game.html
+++ b/frontend/game.html
@@ -2,8 +2,8 @@
 <html>
     <head>
     </head>
-    <body>
-        <h1><center>transcendence game bruh</center></h1>
+    <body class="m-0 p-0 bg-black text-white"></body>
+        <h1 class="text-[5vh] font-semibold mt-[3vh] mb-[3vh]"><center>transcendence game bruh</center></h1>
         <div id="game"></div>
         <script type="module" src="/src/game.ts"></script>
     </body>
