--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
 	<script src="https://accounts.google.com/gsi/client"></script>
     <script type="module" src="/src/main.ts"></script>
 	<script type="module" src="/src/google_sign_in.ts"></script>
+	<script type="module" src="/src/profile.ts"></script>
 	<div id="app"></div>
 </body>
 </html>
