changed the localhost game to SPA

--- a/frontend/gameindex.html
+++ b/frontend/gameindex.html
@@ -5,6 +5,7 @@
 </head>
 <body class = "relative bg-black">
 	<script type="module" src="/src/gameindex.ts"></script>
-	<div id = "game"></div>
+	<script type="module" src="/src/game.ts"></script>
+	<div id = "index"></div>
 </body>
 </html>
