--- a/frontend/gameindex.html
+++ b/frontend/gameindex.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>game index page</title>
@@ -7,4 +7,4 @@
 	<script type="module" src="/src/gameindex.ts"></script>
 	<div id = "index"></div>
 </body>
-</html>
+</html> -->
