--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="/src/main.ts"></script>
 	<script type="module" src="/src/google_sign_in.ts"></script>
 	<div id="app"></div>
+	<div id="index" class="hidden relative bg-black"></div>
 </body>
 </html>
 
